Add JavaFX treemap UI
- ui.App: squarified treemap (Bruls-Huizing-van Wijk) with click-to-drill,
  hover details, dark theme, and a -Ddiskbloom.shot PNG export
- Launcher: non-Application entry point to satisfy the JavaFX module launch
- Sizes: shared human-readable byte formatter (used by CLI and UI)
- diskbloom.cmd: compile-and-launch helper for the Desktop shortcut
- README: GUI build/run instructions + screenshot

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>